--- a/index.html
+++ b/index.html
@@ -1,51 +1,13 @@
 <!DOCTYPE html>
-<html lang="en">
-
-<head>
-    <title>quickstart-example</title>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
-    <!--        YOUR STYLES HERE        -->
-    <link rel="stylesheet" href="styles/main.css" />
-    <link rel="stylesheet" href="styles/odometr.css" />
-</head>
-
-<body>
-    <div class="main">
-        <div class="test-style">
-            <span id="h100"></span>
-            <span>x100</span>
-        </div>
-        <div class="test-style">
-            <span id="h50"></span>
-            <span>x50</span>
-        </div>
-        <div class="test-style">
-            <span id="h0"></span>
-            <span>xMiss</span>
-        </div>
-        <div class="test-style">
-            <span id="pp" class="odometer"></span>
-            <span>pp</span>
-        </div>
-        <div class="test-style">
-            <span id="accuracy"></span>
-            <span>%</span>
-        </div>
-    </div>
-
-
-
-    <!--        OTHER SCRIPTS        -->
-    <script src="js/countUp.js"></script>
-    <script src="js/odometr.js"></script>
-
-
-
-    <!--        YOUR COUNTER LOGIC FILES        -->
-    <script type="module" src="index.js"></script>
-</body>
-
+<html lang="">
+  <head>
+    <meta charset="UTF-8">
+    <link rel="icon" href="/favicon.ico">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Vite App</title>
+  </head>
+  <body>
+    <div id="app"></div>
+    <script type="module" src="/src/main.ts"></script>
+  </body>
 </html>
